[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ap2p"
version = "0.0.1"
requires-python = ">=3.4"
description = "A simple peer-to-peer network using asyncio"
readme = "README.md"
keywords = ["asyncio", "networking", "p2p", "peer to peer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/aimir/ap2p"
Issues = "https://github.com/aimir/ap2p/issues"
